# LagrangianLearning

./: .gitignore  LICENSE  setup.cfg  setup.py
src/TestFunction/: AbstractTestFunction.py  __init__.py  functions.py
test/: test_TestFunction.py
