[metadata]
name = laglearn
version = 0.0.1
author = Ramin Barati
author_email = rekino@gmail.com
description = A package for Lagrangian learning of machine learning models.
long_description = file: README.md
long_description_content_type = text/markdown
url = <url>
license = MIT

[options]
packages = find:
install_requires =
    numpy>=1.20
    pandas>=1.3
    matplotlib>=3.4

[options.packages.find]
where = src